# ararext-bootloader

./: .gitignore  ARCHITECTURE.md  BUILD.md  COMPARISON.md  Cargo.toml  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.rs  memory.x
.cargo/: config.toml
src/: constants.rs  crc.rs  flash.rs  handlers.rs  main.rs  memory.rs  uart.rs
