[package]
name = "ararext-bootloader"
version = "0.1.0"
edition = "2021"
authors = ["Ararext"]
description = "Custom STM32F407xx bootloader in Rust with OTA support"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
stm32f4 = "0.10"
stm32f4xx-hal = "0.8"
embedded-hal = "0.2"
nb = "=0.1.3"
panic-halt = "0.2"

# For build script
[build-dependencies]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1

[profile.dev]
opt-level = 0
